# Copyright (c) 2021 bestechnic (Shanghai) Technologies CO., LIMITED.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Kernel type, e.g. "linux", "liteos_a", "liteos_m".
kernel_type = "liteos_m"

# Kernel version.
kernel_version = "3.0.0"

# Board CPU type, e.g. "cortex-a7", "riscv32".
board_cpu = "cortex-m33"

# Board arch, e.g.  "armv7-a", "rv32imac".
board_arch = ""

# Toolchain name used for system compiling.
# E.g. gcc-arm-none-eabi, arm-linux-harmonyeabi-gcc, ohos-clang,  riscv32-unknown-elf.
# Note: The default toolchain is "ohos-clang". It's not mandatory if you use the default toochain.
board_toolchain = "arm-none-eabi-gcc"

# The toolchain path instatlled, it's not mandatory if you have added toolchian path to your ~/.bashrc.
board_toolchain_path = ""

# Compiler prefix.
board_toolchain_prefix = "arm-none-eabi-"

# Compiler type, "gcc" or "clang".
board_toolchain_type = "gcc"

# config.json parse
if (product_path != "") {
    product_conf = read_file("${product_path}/config.json", "json")
    product_name = product_conf.product_name
    bin_list = product_conf.bin_list
    fs_list = product_conf.fs_list
    bsp_bin_list = product_conf.bsp_bin_list
}

# Board related common compile flags.
board_cflags = [
    "-mcpu=cortex-m33",
    "-mfpu=fpv5-sp-d16",
    "-mfloat-abi=hard",
    "-fdata-sections",
    "-mthumb",
    "-mthumb-interwork",
    "-DPLAYER_TOOL",
    "-DCHIP_BEST2003",
    "-DOS_HEAP_SIZE=0x400000",
    "-DCHIP_HAS_UART=3",
    "-DRTOS",
    "-DDEBUG=1",
    "-DCMSIS_OS_VER=2",
    "-DOS_HWI_MAX_NUM=96",
]

board_cxx_flags = board_cflags
board_ld_flags = [
    "-mcpu=cortex-m33",
    "-mfpu=fpv5-sp-d16",
    "-mfloat-abi=hard",
    "-fdata-sections",
    "-mthumb",
    "-mthumb-interwork",
    "-L${ohos_root_path}out/${board_name}/${product_name}/libs",
]

# fs functions support
wrap_fs_api = "false"
foreach (fs,fs_list) {
    if (fs.enable == "true") {
        wrap_fs_api = "true"
    }
}

if (wrap_fs_api == "true") {
    board_ld_flags += [
        "-Wl,--wrap=mount",
        "-Wl,--wrap=umount",
        "-Wl,--wrap=umount2",
        "-Wl,--wrap=open",
        "-Wl,--wrap=close",
        "-Wl,--wrap=read",
        "-Wl,--wrap=write",
        "-Wl,--wrap=lseek",
        "-Wl,--wrap=unlink",
        "-Wl,--wrap=fstat",
        "-Wl,--wrap=stat",
        "-Wl,--wrap=fsync",
        "-Wl,--wrap=mkdir",
        "-Wl,--wrap=opendir",
        "-Wl,--wrap=readdir",
        "-Wl,--wrap=closedir",
        "-Wl,--wrap=rmdir",
        "-Wl,--wrap=rename",
        "-Wl,--wrap=statfs",
        "-Wl,--wrap=ftruncate",

        "-Wl,--wrap=fopen",
        "-Wl,--wrap=fclose",
        "-Wl,--wrap=fflush",
        "-Wl,--wrap=fread",
        "-Wl,--wrap=fwrite",
        "-Wl,--wrap=fseek",
        "-Wl,--wrap=ftell",
        "-Wl,--wrap=fgets",
        "-Wl,--wrap=fputs",
        "-Wl,--wrap=feof",
        "-Wl,--wrap=fileno",
        "-Wl,--wrap=clearerr",
        "-Wl,--wrap=strdup",
    ]
}

# Board related headfiles search path.
board_include_dirs = [
    "${ohos_root_path}utils/native/lite/include",
    "${ohos_root_path}kernel/liteos_m/kal/cmsis",
    "${ohos_root_path}kernel/liteos_m/utils/",
    "${ohos_root_path}kernel/liteos_m/kernel/include",
    "${ohos_root_path}kernel/liteos_m/kernel/arch/arm/cortex-m33/gcc/",
    "${ohos_root_path}device/bestechnic/${board_name}/sdk_liteos/bsp/platform/hal/",
    "${ohos_root_path}device/bestechnic/${board_name}/sdk_liteos/bsp/utils/kfifo",
    "${ohos_root_path}device/bestechnic/${board_name}/sdk_liteos/bsp/platform/hal/best2003",
    "${ohos_root_path}device/bestechnic/${board_name}/sdk_liteos/bsp/rtos/liteos/liteos_m/",
    "${ohos_root_path}device/bestechnic/${board_name}/sdk_liteos/bsp/rtos/liteos/liteos_m/utils",
    "${ohos_root_path}device/bestechnic/${board_name}/sdk_liteos/bsp/rtos/liteos/liteos_m/kernel/include",
    "${ohos_root_path}device/bestechnic/${board_name}/sdk_liteos/bsp/include/rtos/liteos/liteos_m/kal/cmsis/",
    "${ohos_root_path}device/bestechnic/${board_name}/sdk_liteos/bsp/platform/cmsis/inc",
    "${ohos_root_path}device/bestechnic/${board_name}/sdk_liteos/bsp/services/fs/fat/ChaN/",
    "${ohos_root_path}drivers/framework/include/utils/",
    "${ohos_root_path}drivers/framework/include/core/",
    "${ohos_root_path}drivers/framework/include/config",
    "${ohos_root_path}drivers/framework/include/core",
    "${ohos_root_path}drivers/framework/include/net",
    "${ohos_root_path}drivers/framework/include/osal",
    "${ohos_root_path}drivers/framework/include/platform",
    "${ohos_root_path}drivers/framework/include/utils",
    "${ohos_root_path}drivers/framework/include/wifi",
    "${ohos_root_path}drivers/framework/core/common/include/host",
    "${ohos_root_path}drivers/framework/core/common/include/manager",
    "${ohos_root_path}drivers/adapter/lite/uhdf/posix/include",
    "${ohos_root_path}drivers/framework/ability/sbuf/include",
    "${ohos_root_path}drivers/adapter/lite/khdf/osal/include",
    "${ohos_root_path}drivers/framework/support/platform/include",
    "${ohos_root_path}drivers/framework/include/platform/",
    "${ohos_root_path}kernel/liteos_m/kernel/arch/include/",
    "${ohos_root_path}third_party/musl/porting/liteos_m/kernel/include/",
    "${ohos_root_path}third_party/bounds_checking_function/include/",
]
board_include_dirs += []

# Board adapter dir for OHOS components.
board_adapter_dir = "${ohos_root_path}device/bestechnic/${board_name}/sys_adapter"

# Sysroot path.
board_configed_sysroot = ""

# Board storage type, it used for file system generation.
storage_type = ""
