# Copyright (c) 2021 bestechnic (Shanghai) Technologies CO., LIMITED.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("drivers.gni")

config("drivers_config") {
  include_dirs = hdf_include_dirs
  include_dirs += [
    "flash",
    "touch/include",
    "display/hal",
  ]
}

group("drivers_adapter") {
  public_configs = [ ":drivers_config" ]
  deps = []

  if (bes_drivers_flash_enable) {
    deps += [ "flash:flash" ]
  }

  if (bes_drivers_gpio_enable) {
    deps += [ "gpio:gpio" ]
  }

  if (bes_drivers_i2c_enable) {
    deps += [ "i2c:i2c" ]
  }

  if (bes_drivers_spi_enable) {
    deps += [ "spi:spi" ]
  }

  if (bes_drivers_uart_enable) {
    deps += [ "uart:uart" ]
  }

  if (bes_drivers_pwm_enable) {
    deps += [ "pwm:pwm" ]
  }

  if (bes_drivers_mipi_dsi_enable) {
    deps += [ "mipi_dsi:mipi_dsi" ]
  }

  if (bes_drivers_display_enable) {
    deps += [ "display:display" ]
  }

  if (bes_drivers_touch_enable) {
    deps += [ "touch:touch" ]
  }
}