# Copyright (c) 2021 bestechnic (Shanghai) Technologies CO., LIMITED.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//vendor/bestechnic/${product_name}/config.gni")

hdf_include_dirs = [
    "//drivers/adapter/khdf/liteos_m/osal/include/",
    "//drivers/framework/include",
    "//drivers/framework/include/config",
    "//drivers/framework/include/core",
    "//drivers/framework/include/platform",
    "//drivers/framework/include/utils",
    "//drivers/framework/core/host/include",
    "//drivers/framework/core/shared/include",
    "//drivers/framework/utils/include",
    "//kernel/liteos_m/kernel/arch/include",
    "//base/hiviewdfx/hilog_lite/interfaces/native/kits",
]