# Copyright (c) 2021 bestechnic (Shanghai) Technologies CO., LIMITED.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("//vendor/bestechnic/${product_name}/config.gni")

config("ui_adapter_config") {
  include_dirs = [ "." ]
}

static_library("ui_adapter") {
  sources = [
    "display_device.cpp",
    "fbdev.cpp",
    "touch_input.cpp",
    "ui_main.cpp",
  ]

  public_configs = [ ":ui_adapter_config" ]
  public_deps = [
    "//device/bestechnic/${board_name}/components/drivers:drivers_adapter",
    "//foundation/graphic/ui:ui",
  ]
  if (ace_enable) {
    defines = [ "ENABLE_ACE" ]
    public_deps += [ "//foundation/ace/ace_engine_lite/frameworks:ace_lite" ]
  }

  include_dirs = [
    "//device/bestechnic/${board_name}/components/drivers/touch/include",
    "//device/bestechnic/${board_name}/components/utils/include",
    "//drivers/peripheral/display/interfaces/include",
    "//drivers/peripheral/base",
    "//third_party/musl/porting/liteos_m/kernel/include",
  ]
}
