# Copyright (c) 2021 bestechnic (Shanghai) Technologies CO., LIMITED.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("../drivers.gni")

static_library("display") {
    sources = [
        "hal/disp_hal.c",
        "hal/lcd_abs_if.c",
        "hdi/display_layer.c",
        "hdi/display_gralloc.c",
        "hdi/display_gfx.c",
    ]
    deps = [
        "../mipi_dsi:mipi_dsi",
        "../lcd:lcd",
    ]
    include_dirs = hdf_include_dirs
    include_dirs += [
        "hal",
        "../mipi_dsi",
        "//drivers/peripheral/display/hal",
        "//drivers/peripheral/display/interfaces/include",
        "//drivers/peripheral/base",
        "//third_party/musl/porting/liteos_m/kernel/include",
    ]
}
