import("//build/lite/config/component/lite_component.gni")
import("../hdf.gni")

static_library("i2c") {
    sources = [
        "i2c.c",
    ]

    include_dirs = hdf_include_dirs
    include_dirs += [
        "//device/bestechnic/"+board_name+"/sdk_liteos/bsp/platform/hal",
        "//device/bestechnic/"+board_name+"/sdk_liteos/bsp/include/rtos/liteos/liteos_m/kal/cmsis",
    ]
}