import("//build/lite/config/component/lite_component.gni")

static_library("touch") {
  sources = [
    "touch.c",
    "touch_ztw523.c",
  ]

  include_dirs = [
    "include",
    "//device/bestechnic/" + board_name + "/sdk_liteos/sys_adapter/include",
    "//drivers/framework/include/platform",
    "//drivers/framework/include/utils",
    "//drivers/adapter/uhdf/posix/include",
    "//kernel/liteos_m/kal/cmsis",
  ]
}
