# Copyright (c) 2021 bestechnic (Shanghai) Technologies CO., LIMITED.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("//build/lite/config/subsystem/lite_subsystem.gni")

static_library("sys_adapter") {
  sources = [
    "src/platform.c",
    "src/hm_sys.c",
  ]

  deps = [ "//device/bestechnic/" + board_name + ":build_sdk_into_lib" ]

  include_dirs = [
    "include",
    "//device/bestechnic/" + board_name + "/sdk_liteos/bsp/apps/factory/",
    "//device/bestechnic/" + board_name + "/sdk_liteos/bsp/platform/hal",
    "//device/bestechnic/" + board_name + "/sdk_liteos/bsp/platform/drivers/ana",
    "//device/bestechnic/" + board_name + "/sdk_liteos/bsp/platform/cmsis/inc",
    "//device/bestechnic/" + board_name + "/sdk_liteos/bsp/services/wifi_app/wifi_console/",
    "//device/bestechnic/" + board_name + "/sdk_liteos/bsp/include/rtos/liteos/liteos_m/kal/cmsis/",
    "//kernel/liteos_m/kernel/arch/include/",
  ]

  include_dirs += [
    "//base/hiviewdfx/hiview_lite",
    "//utils/native/lite/include",
    "//base/hiviewdfx/hilog_lite/frameworks/mini",
    "//base/hiviewdfx/hilog_lite/interfaces/native/kits/hilog_lite",
    "//drivers/framework/core/common/include/manager",
  ]

  cflags = [ "-DLOG_FMT_MAX_LEN=128" ]
}
