# Copyright (c) 2021 bestechnic (Shanghai) Technologies CO., LIMITED.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//drivers/adapter/khdf/liteos_m/hdf.gni")

config("public") {
  include_dirs = [ "." ]
}

hdf_driver("ui_adapter") {
  sources = [
    "display_device.cpp",
    "fbdev.cpp",
    "touch_input.cpp",
    "ui_main.cpp",
  ]

  bes_ace_enable = false

  if (bes_ace_enable) {
    defines = [ "ENABLE_ACE" ]
  }

  include_dirs = [
    "//foundation/graphic/ui/interfaces/innerkits",
    "//foundation/graphic/utils/interfaces/kits",
    "//foundation/graphic/utils/interfaces/innerkits",
    "//foundation/graphic/ui/interfaces/kits",
    "//foundation/graphic/ui/frameworks",
    "//third_party/freetype/include",
    "//drivers/peripheral/display/interfaces/include",
    "//drivers/peripheral/base",
    "//base/hiviewdfx/hilog_lite/interfaces/native/kits/hilog_lite",
  ]
}
