# Copyright (c) 2021 bestechnic (Shanghai) Technologies CO., LIMITED.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("../drivers.gni")

static_library("flash") {
  sources = [
    "flash.c",
    "flash_conf.c",
  ]

  if (bes_trustzone_enable) {
    defines = [ "ARM_CMNS=1" ]
  }
  deps = [ "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_static" ]
  deps += [ "//device/bestechnic/${board_name}/hals/update:hal_update_static" ]
  include_dirs = hdf_include_dirs
  include_dirs += [
    "//device/bestechnic/${board_name}/sdk_liteos/bsp/platform/hal",
    "//device/bestechnic/${board_name}/sdk_liteos/bsp/platform/drivers/ana",
    "//device/bestechnic/${board_name}/sdk_liteos/bsp/utils/crc32",
    "//device/bestechnic/${board_name}/sdk_liteos/bsp/services/norflash_api",
    "//device/bestechnic/${board_name}/sdk_liteos/bsp/include/rtos/liteos/liteos_m/kal/cmsis",
    "//base/update/ota_lite/hals",
    "//base/update/ota_lite/interfaces/kits",
    "//device/bestechnic/${board_name}/hals/update/",
  ]
}
