# Copyright (c) 2021 bestechnic (Shanghai) Technologies CO., LIMITED.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("../drivers.gni")

static_library("watchdog") {
  sources = [ "watchdog.c"]

  include_dirs = hdf_include_dirs
  include_dirs += [
    "//device/bestechnic/${board_name}/sdk_liteos/bsp/platform/hal",
    "//device/bestechnic/${board_name}/sdk_liteos/bsp/include/liteos_m/kal/cmsis",
    "//thirdparty/bounds_checking_function/include/",
    "//drivers/framework/support/platform/include/watchdog/",
  ]
}
