# Copyright (c) 2021 bestechnic (Shanghai) Technologies CO., LIMITED.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("bluetoothservice") {
  sources = [
    "ohos_bt_gap.c",
    "ohos_bt_gatt_server.c",
    "ohos_bt_gatt.c",
  ]
  include_dirs = [
    "kernel/liteos_m/utils/",
    "//device/bestechnic/${board_name}/sdk_liteos/bsp/services/bluetooth_adapter",
    "//device/bestechnic/${board_name}/sdk_liteos/bsp/services/bluetooth_adapter/harmony",
    "//device/bestechnic/${board_name}/sdk_liteos/bsp/services/ble_app_v2/app_main/",
    "//device/bestechnic/${board_name}/sdk_liteos/bsp/services/nv_section/userdata_section",
    "//device/bestechnic/${board_name}/sdk_liteos/bsp/services/nv_section/factory_section",
    "//device/bestechnic/${board_name}/sdk_liteos/bsp/apps/key",
    "//device/bestechnic/${board_name}/sdk_liteos/bsp/services/bt_app",
    "//device/bestechnic/${board_name}/sdk_liteos/bsp/utils/cqueue/",
    "//device/bestechnic/${board_name}/sdk_liteos/bsp/services/multimedia/audio/codec/sbc/inc/",
    "//device/bestechnic/${board_name}/sdk_liteos/bsp/services/bt_app/a2dp_codecs/include/",
    "//device/bestechnic/${board_name}/sdk_liteos/bsp/services/ble_stack_v2/ip/ble/hl/api/",
    "//device/bestechnic/${board_name}/sdk_liteos/bsp/services/ble_stack_v2/modules/common/api/",
    "//device/bestechnic/${board_name}/sdk_liteos/bsp/services/ble_stack_v2/modules/rwip/api/",
    "//device/bestechnic/${board_name}/sdk_liteos/bsp/services/ble_stack_v2/ip/ble/hl/inc/",
    "//device/bestechnic/${board_name}/sdk_liteos/bsp/config/best2600w_liteos/",
    "//foundation/communication/bluetooth/interfaces/innerkits/native_c/include/",
    "//device/bestechnic/${board_name}/sdk_liteos/bsp/services/bt_if_enhanced/inc/",
    "//device/bestechnic/${board_name}/sdk_liteos/bsp/services/ble_profiles_v2/btadapter/",
  ]

  defines = [
    "BLE_ADAPTER_ATTB_NUM=16",
  ]
}
