# Copyright (c) 2021 bestechnic (Shanghai) Technologies CO., LIMITED.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("../../drivers.gni")

config("display_hal_public_config") {
  include_dirs = [
    ".",
    "//drivers/peripheral/base",
    "//drivers/peripheral/display/interfaces/include",
    "//drivers/peripheral/display/hal",
  ]
}

static_library("hal_display") {
  sources = [
    "disp_hal.c",
    "lcd_abs_if.c",
    "panel/a064.c",
    "panel/icna3311.c",
    "panel/rm69330.c",
  ]

  deps = [ "../../mipi_dsi:mipi_dsi" ]
  include_dirs = hdf_include_dirs
  include_dirs += [
    "../../mipi_dsi",
    "//third_party/musl/porting/liteos_m/kernel/include",
  ]
  public_configs = [ ":display_hal_public_config" ]
}
