# Copyright (c) 2021 bestechnic (Shanghai) Technologies CO., LIMITED.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("wifiservice") {
    sources = [
        "source/wifi_device.c",
        "source/wifi_hotspot.c",
    ]
    include_dirs = [
        "//foundation/communication/interfaces/kits/wifi_lite/wifiservice",
        "//foundation/distributedschedule/interfaces/kits/samgr_lite/samgr",
        "//foundation/communication/wifi_lite/interfaces/wifiservice",
        "//device/bestechnic/" + board_name + "/sdk_liteos/bsp/net/wifi/",
        "//device/bestechnic/" + board_name + "/sdk_liteos/bsp/include/rtos/liteos/liteos_m/kal/cmsis/",
    ]
}
